Add description field to package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "electron-dev-env",
+  "description" : "live reload electron dev enironment using gulp",
   "version": "0.1.1",
   "main": "main.js",
   "license": "MIT",
