--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "name": "electron-dev-env",
-  "description": "live reload electron dev enironment using gulp",
+  "description": "live reload electron dev enironment using gulp + browserify + react(es6)",
   "version": "0.1.3",
   "main": "main.js",
+  "keywords" : [
+    "electron", "gulp", "react", "desktop", "browserify", "es6", "jsx"
+  ]
   "license": "MIT",
   "devDependencies": {
     "babelify": "^6.4.0",
