--- a/package.json
+++ b/package.json
@@ -4,8 +4,14 @@
   "version": "0.1.3",
   "main": "main.js",
   "keywords" : [
-    "electron", "gulp", "react", "desktop", "browserify", "es6", "jsx"
-  ]
+    "electron",
+    "gulp",
+    "react",
+    "desktop",
+    "browserify",
+    "es6",
+    "jsx"
+  ],
   "license": "MIT",
   "devDependencies": {
     "babelify": "^6.4.0",
