fixed typo in package.json + added livereload keyword

--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "electron-dev-env",
-  "description": "live reload electron dev enironment using gulp + browserify + react(es6)",
+  "description": "live reload electron dev environment using gulp + browserify + react(es6)",
   "version": "0.1.4",
   "main": "main.js",
   "keywords": [
+    "livereload",
     "electron",
     "gulp",
     "react",
